VP 10.2.0 Changelog
------------------------
- Duration function added to the light commands. See CommandReference.txt for more details.

- under Video Preferences you can define a waiting time after which VP will do a alt+tab simulation for bringing the VP player back into exclusive fullscreen mode.

- hotkey for adding normal and smooth control points for walls, ramps and lights. Select a wall,ramp or light and press F10 for a normal unsmoothed control point and F11 for a smoothed one.

- animation support for mesh primitives added: The animation sequence is based on multiple .obj files for each frame. Let's say we have an animation of 100 single frames, then you have to export
  each frame into a separate .obj file with the nameing format <meshname>_x.obj where x is the frame number. When importing a mesh, check the "Import Animation sequence" in the import dialog and
  select the .obj file of the first frame. VP will then load all other frames and, when done, will show you a short message box how many frames were imported.
  Check the CommandReference.txt for the new primitive animation script functions.

- bumper cap, base, ring, skirt can be set to invisible separately

- add one-way trigger mesh (TriggerWireC type)

- changes to bumper material: add separate bumper ring material and don't use a built-in texture for the bumper base and skirt anymore

- add physics settings per material to the material manager.
  Settings are: Friction, elasticity, elasticity falloff and scatter angle.
  This allows for tweaking all physics settings in the material manager for all 'similar' table elements (with the same material) at once.
  (If you like you can still overwrite the settings for each element separatly though)

- extend the EOSTorque effect to both entering and leaving the EOS zone and add additional EOS Torque Angle to make this range configurable
  This allows for more flipper tricks without having to dial in unrealistic flipper settings
