@@ -395,12 +395,12 @@ BEGIN
     PUSHBUTTON      "&Rename",IDC_RENAME,259,97,50,14,WS_DISABLED
 END
 
-IDD_KEYS DIALOGEX 0, 0, 627, 267
+IDD_KEYS DIALOGEX 0, 0, 627, 311
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Keys, Nudge and DOF"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "Button Assignments",IDC_STATIC,7,7,242,254
+    GROUPBOX        "Button Assignments",IDC_STATIC,7,7,242,296
     GROUPBOX        "",IDC_STATIC,12,17,54,39
     PUSHBUTTON      "Left Flipper",IDC_LEFTFLIPPERBUTTON,14,17,50,14
     CTEXT           "",IDC_LEFTFLIPPER,14,32,50,8,SS_CENTERIMAGE
@@ -481,11 +481,11 @@ BEGIN
     PUSHBUTTON      "Custom 4",IDC_JOYCUSTOM4BUTTON,192,173,50,14
     CTEXT           "",IDC_JOYCUSTOM4,192,188,50,8,SS_CENTERIMAGE
     COMBOBOX        IDC_JOYCUSTOM4COMBO,192,197,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "",IDC_STATIC,190,212,54,39
-    PUSHBUTTON      "Debug Balls",IDC_DEBUGBALLSBUTTON,192,212,50,14
-    CTEXT           "",IDC_DEBUGBALL,192,227,50,8,SS_CENTERIMAGE
-    COMBOBOX        IDC_JOYDEBUGCOMBO,192,236,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Override Default Layout",IDC_DefaultLayout,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,215,88,10
+    GROUPBOX        "",IDC_STATIC,12,212,54,39
+    PUSHBUTTON      "Debug Balls",IDC_DEBUGBALLSBUTTON,14,212,50,14
+    CTEXT           "",IDC_DEBUGBALL,14,227,50,8,SS_CENTERIMAGE
+    COMBOBOX        IDC_JOYDEBUGCOMBO,14,236,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Override Default Layout",IDC_DefaultLayout,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,258,88,10
     GROUPBOX        "PinMAME Buttons",IDC_STATIC,254,7,241,82
     CTEXT           "EB BuyIn (2)",IDC_STATIC,261,17,50,14,0,WS_EX_DLGMODALFRAME
     COMBOBOX        IDC_JOYPMBUYIN,261,32,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
@@ -504,46 +504,46 @@ BEGIN
     COMBOBOX        IDC_JOYPMUP,379,69,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     CTEXT           "Enter (0)",IDC_STATIC,438,54,50,14,0,WS_EX_DLGMODALFRAME
     COMBOBOX        IDC_JOYPMENTER,438,69,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Axis Assignments",IDC_STATIC,258,125,233,66
-    LTEXT           "X Axis (L/R)",IDC_STATIC,265,137,39,8
-    COMBOBOX        IDC_LRAXISCOMBO,307,136,40,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Reverse",IDC_LRAXISFLIP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,348,137,40,10
-    RTEXT           "X-Gain",IDC_STATIC,432,137,25,8
-    LTEXT           "X-Max",IDC_STATIC,392,137,25,8
-    EDITTEXT        IDC_XMAX_EDIT,414,136,18,13,ES_RIGHT | ES_AUTOHSCROLL
-    EDITTEXT        IDC_LRAXISGAIN,462,136,18,13,ES_RIGHT | ES_AUTOHSCROLL
-    LTEXT           "%",IDC_STATIC,482,137,8,8
-    LTEXT           "Y Axis (U/D)",IDC_STATIC,265,155,41,8
-    COMBOBOX        IDC_UDAXISCOMBO,307,154,40,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Reverse",IDC_UDAXISFLIP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,348,155,40,10
-    RTEXT           "Y-Gain",IDC_STATIC,432,155,25,8
-    LTEXT           "Y-Max",IDC_STATIC,392,155,25,8
-    EDITTEXT        IDC_YMAX_EDIT,414,154,18,13,ES_RIGHT | ES_AUTOHSCROLL
-    EDITTEXT        IDC_UDAXISGAIN,462,154,18,13,ES_RIGHT | ES_AUTOHSCROLL
-    LTEXT           "%",IDC_STATIC,482,155,8,8
-    LTEXT           "Plunger",IDC_STATIC,265,173,34,8
-    COMBOBOX        IDC_PLUNGERAXIS,307,172,40,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Reverse",IDC_ReversePlunger,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,348,173,40,10
-    RTEXT           "Dead Zone",IDC_STATIC,421,173,36,8
-    EDITTEXT        IDC_DEADZONEAMT,462,172,18,13,ES_RIGHT | ES_AUTOHSCROLL
-    LTEXT           "%",IDC_STATIC,482,173,8,8
-    GROUPBOX        "Nudge, Plumb, Plunger (Changes will not affect open tables)",IDC_STATIC,254,114,241,133
-    CONTROL         "Enable Nudge Filter",IDC_ENABLE_NUDGE_FILTER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,257,207,100,10
-    CONTROL         "Enable Analog Nudge",IDC_GLOBALACCEL,"Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,257,219,83,10
-    CONTROL         "Normal Mounting Orientation",IDC_GLOBALNMOUNT,"Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,380,219,102,10
-    CONTROL         "Tilt Sensitivity",IDC_CBGLOBALTILT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,257,231,55,10
-    EDITTEXT        IDC_GLOBALTILT,314,230,20,13,ES_RIGHT | ES_AUTOHSCROLL
-    CONTROL         "Accelerometer Rotation",IDC_CBGLOBALROTATION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,380,231,90,10
-    EDITTEXT        IDC_GLOBALROTATION,470,230,20,13,ES_RIGHT | ES_AUTOHSCROLL
+    GROUPBOX        "Axis Assignments",IDC_STATIC,258,105,233,66
+    LTEXT           "X Axis (L/R)",IDC_STATIC,265,117,39,8
+    COMBOBOX        IDC_LRAXISCOMBO,307,116,40,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Reverse",IDC_LRAXISFLIP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,348,117,40,10
+    RTEXT           "X-Gain",IDC_STATIC,432,117,25,8
+    LTEXT           "X-Max",IDC_STATIC,392,117,25,8
+    EDITTEXT        IDC_XMAX_EDIT,414,116,18,13,ES_RIGHT | ES_AUTOHSCROLL
+    EDITTEXT        IDC_LRAXISGAIN,462,116,18,13,ES_RIGHT | ES_AUTOHSCROLL
+    LTEXT           "%",IDC_STATIC,482,117,8,8
+    LTEXT           "Y Axis (U/D)",IDC_STATIC,265,135,41,8
+    COMBOBOX        IDC_UDAXISCOMBO,307,134,40,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Reverse",IDC_UDAXISFLIP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,348,135,40,10
+    RTEXT           "Y-Gain",IDC_STATIC,432,135,25,8
+    LTEXT           "Y-Max",IDC_STATIC,392,135,25,8
+    EDITTEXT        IDC_YMAX_EDIT,414,134,18,13,ES_RIGHT | ES_AUTOHSCROLL
+    EDITTEXT        IDC_UDAXISGAIN,462,134,18,13,ES_RIGHT | ES_AUTOHSCROLL
+    LTEXT           "%",IDC_STATIC,482,135,8,8
+    LTEXT           "Plunger",IDC_STATIC,265,153,34,8
+    COMBOBOX        IDC_PLUNGERAXIS,307,152,40,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Reverse",IDC_ReversePlunger,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,348,153,40,10
+    RTEXT           "Dead Zone",IDC_STATIC,421,153,36,8
+    EDITTEXT        IDC_DEADZONEAMT,462,152,18,13,ES_RIGHT | ES_AUTOHSCROLL
+    LTEXT           "%",IDC_STATIC,482,141,8,8
+    GROUPBOX        "Nudge, Plumb, Plunger (Changes will not affect open tables)",IDC_STATIC,254,95,241,122
+    CONTROL         "Enable Nudge Filter",IDC_ENABLE_NUDGE_FILTER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,257,175,100,10
+    CONTROL         "Enable Analog Nudge",IDC_GLOBALACCEL,"Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,257,187,83,10
+    CONTROL         "Normal Mounting Orientation",IDC_GLOBALNMOUNT,"Button",BS_AUTOCHECKBOX | WS_GROUP | WS_TABSTOP,380,187,102,10
+    CONTROL         "Tilt Sensitivity",IDC_CBGLOBALTILT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,257,199,55,10
+    EDITTEXT        IDC_GLOBALTILT,314,198,20,13,ES_RIGHT | ES_AUTOHSCROLL
+    CONTROL         "Accelerometer Rotation",IDC_CBGLOBALROTATION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,380,199,90,10
+    EDITTEXT        IDC_GLOBALROTATION,470,198,20,13,ES_RIGHT | ES_AUTOHSCROLL
     PUSHBUTTON      "OK",IDOK,536,246,40,14
     PUSHBUTTON      "Cancel",IDCANCEL,579,246,40,14
-    CONTROL         "Disable ESC key",IDC_DisableESC_CB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,113,215,68,10
-    GROUPBOX        "",IDC_STATIC,262,130,128,21
-    GROUPBOX        "",IDC_STATIC,262,148,128,21
-    GROUPBOX        "",IDC_STATIC,262,166,128,21
-    LTEXT           "* To assign Custom Keys to Gamepad Buttons, click on the button and select desired key, then choose desired gamepad button from dropdown box.",IDC_STATIC,13,230,168,25
+    CONTROL         "Disable ESC key",IDC_DisableESC_CB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,113,258,68,10
+    GROUPBOX        "",IDC_STATIC,262,110,128,21
+    GROUPBOX        "",IDC_STATIC,262,128,128,21
+    GROUPBOX        "",IDC_STATIC,262,146,128,21
+    LTEXT           "* To assign Custom Keys to Gamepad Buttons, click on the button and select desired key, then choose desired gamepad button from dropdown box.",IDC_STATIC,13,273,168,25
     CONTROL         "Enable Mouse during Play",IDC_ENABLE_MOUSE_PLAYER,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,257,251,100,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,254,218,100,10
     GROUPBOX        "DOF Controller Options",IDC_STATIC,500,7,120,191
     CONTROL         "Disable B2S",IDC_DOF_FORCEDISABLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,505,202,86,10
     CTEXT           "Contactors",IDC_STATIC,505,17,50,14,0,WS_EX_DLGMODALFRAME
@@ -565,6 +565,10 @@ BEGIN
     CTEXT           "Drop Targets",IDC_STATIC,505,165,50,14,0,WS_EX_DLGMODALFRAME
     COMBOBOX        IDC_DOF_DROPTARGETS,505,180,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     LTEXT           "* This will only apply to tables that are using the Controller.vbs in their script code",IDC_STATIC,563,156,55,40
+    GROUPBOX        "",IDC_STATIC,71,212,54,39
+    PUSHBUTTON      "Debugger",IDC_DEBUGGERBUTTON,73,212,50,14
+    CTEXT           "",IDC_DEBUGGER,73,227,50,8,SS_CENTERIMAGE
+    COMBOBOX        IDC_JOYDEBUGGERCOMBO,73,236,50,100,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_TRANSLATE DIALOGEX 0, 0, 186, 97
@@ -2198,7 +2202,7 @@ BEGIN
 
     IDD_KEYS, DIALOG
     BEGIN
-        BOTTOMMARGIN, 266
+        BOTTOMMARGIN, 310
     END
 
     IDD_TRANSLATE, DIALOG
